# zamaPOT-

./: README.md
ZamaPOT-main/: README.md  package-lock.json
ZamaPOT-main/contracts/: hardhat.config.js  package-lock.json  package.json
ZamaPOT-main/contracts/contracts/: EnhancedTalentPassport.sol  TalentPassport.sol
ZamaPOT-main/contracts/scripts/: deploy-sepolia.mjs
ZamaPOT-main/fhe-backend/: Cargo.toml
ZamaPOT-main/fhe-backend/src/: dynamic_questions.rs  main.js  main.rs  quiz_types.rs
ZamaPOT-main/frontend/: deployed-contract.txt  package-lock.json  package.json
ZamaPOT-main/frontend/app/: globals.css  layout.tsx  page.tsx
ZamaPOT-main/frontend/app/Utils/: encryption.ts
ZamaPOT-main/frontend/app/components/: AssessmentModes.tsx
ZamaPOT-main/frontend/app/contact/: page.tsx
ZamaPOT-main/frontend/app/quiz/: page.tsx  quiz.tsx
ZamaPOT-main/frontend/app/quiz/[category]/: page.tsx
ZamaPOT-main/frontend/components/: Dashboard.tsx  EnhancedQuiz.tsx  Leaderboard.tsx  NFTGallery.tsx  Quiz.tsx  QuizSelector.tsx  WalletButton.tsx  WalletConnect.tsx  deepseek_typescript_20251130_31484e.ts
ZamaPOT-main/frontend/services/: blockchain.ts  deepseek_typescript_20251129_8c850c.txt
ZamaPOT-main/frontend/utils/: contract.js  encryption.ts
