[package]
name = "fhe-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# Removed tfhe dependency for mobile compatibility

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
tfhe = { version = "0.4", optional = true }
